--- a/Unit01/40460_Mod01_1.2.ipynb
+++ b/Unit01/40460_Mod01_1.2.ipynb
@@ -65,11 +65,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "strings go in single\n",
+      "or double quotes\n"
+     ]
+    }
+   ],
    "source": [
     "# Examples of printing strings with single and double quotes\n",
     "print('strings go in single')\n",
@@ -85,16 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fas sucks\n",
+      "Dan is better\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] enter a string in the print() function using single quotes\n",
-    "\n",
+    "print('Fas sucks')\n",
     "# [ ] enter a string in the print() function using double quotes\n",
-    "\n"
+    "print(\"Dan is better\")\n"
    ]
   },
   {
@@ -152,17 +170,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "1738\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print an Integer\n",
-    "\n",
-    "\n",
+    "print(7)\n",
     "# [ ] print a strings made of Integer characters\n",
-    "\n",
+    "print(\"1738\")\n",
     "\n"
    ]
   },
@@ -265,14 +291,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Who goes there\n"
+     ]
+    }
+   ],
    "source": [
     "# { ] run cell above then run this cell after completing the code as directed\n",
-    "\n"
+    "current_msg = \"Who goes there\"\n",
+    "#print ('Who goes there')\n",
+    "print(current_msg)"
    ]
   },
   {
@@ -372,19 +408,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oliver Munden\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assign a string value to a variable student_name\n",
-    "\n",
+    "test_value = 66\n",
+    "student_name = \"Oliver Munden\"\n",
     "# [ ] print the value of variable student_name\n",
-    "\n"
+    "\n",
+    "print(student_name)\n"
    ]
   },
   {
@@ -400,20 +446,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fasiah Hyder\n",
+      "Tom jones\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assign the student_name variable  a different string value (a different name)\n",
-    "\n",
+    "student_name = \"Fasiah Hyder\"\n",
     "# [ ] print the value of variable student_name\n",
-    "\n",
+    "print(student_name)\n",
     "# [ ] assign a 3rd different string value, to the variable name \n",
-    "\n",
+    "student_name = \"Tom jones\"\n",
     "# [ ] print the value of variable name\n",
-    "\n"
+    "print(student_name)\n"
    ]
   },
   {
@@ -430,21 +485,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2300\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assigning a value to a variable called bucket\n",
     "\n",
     "# [ ] print the value of bucket \n",
     "\n",
     "# [ ] assign an Integer value (no quotes) to the variable bucket\n",
-    "\n",
+    "bucket = 2300\n",
     "# [ ] print the value of bucket \n",
     "\n",
-    "\n"
+    "print(bucket)\n"
    ]
   },
   {
@@ -472,16 +535,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "123\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print integer 123 number\n",
+    "print(123)\n",
     "\n",
     "# [ ] print string \"123\" number\n",
-    "\n",
+    "print(\"123\")\n",
     "\n"
    ]
   },
@@ -510,7 +583,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
   }
  },
  "nbformat": 4,
