--- a/Unit01/40460_Mod01_1.4.ipynb
+++ b/Unit01/40460_Mod01_1.4.ipynb
@@ -116,55 +116,102 @@
    "outputs": [],
    "source": [
     "# [ ] add 3 integer numbers\n",
-    "\n"
+    "1+2+3\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] add a float number and an integer number\n",
-    "\n"
+    "1.1+1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this notebook belongs todanjamesEaton'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Add the string \"This notebook belongs to \" and a string with your first name\n",
-    "\n"
+    "'this notebook belongs to'+'danjamesEaton'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Create variables sm_number and big_number and assign numbers then add the numbers\n",
-    "\n"
+    "sm_number = 1\n",
+    "big_number=2\n",
+    "sm_number+big_number\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'fas remember to save the notebook frequently'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] assign a string value to the variable first_name and add to the string \", remember to save the notebook frequently\"\n",
-    "\n"
+    "first_name = \"fas\"\n",
+    "first_name + ' remember to save the notebook frequently'\n"
    ]
   },
   {
@@ -243,43 +290,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite food is pizza\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] perform string addition in the variable named new_msg (add a string to \"my favorite food is \")\n",
     "new_msg = \"My favorite food is\"\n",
-    "print(new_msg)\n",
+    "print(new_msg+ \" pizza\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] perform Integer addition in the variable named new_msg (add 2 or more Integers)\n",
-    "new_sum =   0\n",
-    "print(new_sum)\n",
+    "new_msg =   9\n",
+    "print(new_msg+1+5)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "23hello there\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and print a new string variable, new_msg_2, that concatenates new_msg + a literal string\n",
-    "\n"
+    "new_msg = '23'\n",
+    "print (new_msg)\n",
+    "new_msg2 = \"hello there\"\n",
+    "print (new_msg+new_msg2)\n"
    ]
   },
   {
@@ -603,7 +682,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
   }
  },
  "nbformat": 4,
