--- a/Unit02/40461_Mod01_1.1.ipynb
+++ b/Unit02/40461_Mod01_1.1.ipynb
@@ -114,30 +114,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hlbr\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] assign a string 5 or more letters long to the variable: street_name\n",
         "# [ ] print the 1st, 3rd and 5th characters\n",
-        "street_name = Hillburn\n",
-        "print\n",
+        "street_name = 'Hillburn'\n",
+        "print(street_name[::2])\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "GitHubNoobsFc\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] Create an input variable: team_name - ask that second letter = \"i\", \"o\", or \"u\"\n",
         "# [ ] Test if team_name 2nd character = \"i\", \"o\", or \"u\" and print a message\n",
         "# note: use if, elif and else\n",
+        "team_name = 'GitHubNoobsFc'\n",
+        "if team_name[1] == \"i\":\n",
+        "    print(team_name)\n",
+        "elif team_name[1] == \"o\":\n",
+        "    print(team_name)\n",
+        "elif team_name[1] == \"u\":\n",
+        "    print(team_name)\n",
+        "\n",
+        "else:\n",
+        "    print('Error: Invalid')\n",
+        "\n",
         "\n"
       ]
     },
@@ -307,7 +334,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+      "version": "3.8.13"
     },
     "vscode": {
       "interpreter": {
