--- a/Unit02/40461_Mod01_1.1.ipynb
+++ b/Unit02/40461_Mod01_1.1.ipynb
@@ -206,11 +206,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Joana ends with 'a'\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "student_name = \"Joana\"\n",
@@ -222,11 +230,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Joana has 2nd to last letter of 'n'\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "# get second to last letter\n",
@@ -236,11 +252,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "for Joana\n",
+            "index 3 = 'n'\n",
+            "index -2 = 'n'\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "# you can get to the same letter with index counting + or -\n",
@@ -260,29 +286,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "n\n",
+            "w\n",
+            "o\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] assign a string 5 or more letters long to the variable: street_name\n",
         "# [ ] print the last 3 characters of street_name\n",
-        "\n"
+        "street_name = 'largetown'\n",
+        "print(street_name[-1])\n",
+        "print(street_name[-2])\n",
+        "print(street_name[-3])\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "D\n",
+            "l\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] create and assign string variable: first_name\n",
-        "\n",
+        "first_name = 'Daniel'\n",
         "# [ ] print the first and last letters of name\n",
-        "\n"
+        "print(first_name[+0])\n",
+        "print(first_name[-1])\n"
       ]
     },
     {
@@ -296,16 +345,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "s\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] Review, Run, Fix the error using string index\n",
         "shoe = \"tennis\"\n",
         "# print the last letter\n",
-        "print(shoe(-1))\n",
+        "print(shoe[-1])\n",
         "\n"
       ]
     },
