--- a/Unit02/40461_Mod01_1.2.ipynb
+++ b/Unit02/40461_Mod01_1.2.ipynb
@@ -47,11 +47,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "slice student_name[2:5]: let\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "# assign string to student_name\n",
@@ -104,29 +112,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "act\n",
+            "tic\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] slice long_word to print \"act\" and to print \"tic\"\n",
         "long_word = \"characteristics\"\n",
+        "print(long_word[4:7])\n",
+        "print(long_word[11:-1])\n",
         "\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "sequence\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] slice long_word to print \"sequence\"\n",
         "long_word = \"Consequences\"\n",
-        "\n"
+        "print(long_word[3:-1])\n"
       ]
     },
     {
@@ -155,11 +182,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Col\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "student_name = \"Colette\"\n",
@@ -178,17 +213,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Conseq\n",
+            "No Parking C and s\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] print the first half of the long_word\n",
         "long_word = \"Consequences\"\n",
-        "\n",
+        "print(long_word[:6])\n",
         "# [ ] print a message that there is \"No Parking\" on index 0 or index 4 streets\n",
-        "\n"
+        "print(\"No Parking\", long_word[0], \"and\", long_word[3])\n"
       ]
     },
     {
@@ -217,11 +261,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'ette'"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "student_name = \"Colette\"\n",
@@ -240,17 +295,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "uences\n",
+            "No Parking C and s\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] print the second half of the long_word\n",
         "long_word = \"Consequences\"\n",
-        "\n",
+        "print(long_word[6:])\n",
         "# [ ] print a message that there is \"No Parking\" on index 0 or index 4 streets\n",
-        "\n"
+        "print(\"No Parking\", long_word[0], \"and\", long_word[3])\n"
       ]
     },
     {
@@ -280,53 +344,85 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Colacks\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
-        "student_name = \"Colette\"\n",
+        "student_name = \"Colacks\"\n",
         "# return all\n",
         "print(student_name[:])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Clcs\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
-        "student_name = \"Colette\"\n",
+        "student_name = \"Colacks\"\n",
         "# return every other\n",
         "print(student_name[::2])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "oak\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
-        "student_name = \"Colette\"\n",
+        "student_name = \"Colacks\"\n",
         "# return every third, starting at 2nd character\n",
         "print(student_name[1::2])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "osqe\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "long_word = \"Consequences\"\n",
@@ -345,15 +441,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Anlge\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] print the 1st and every 3rd letter of long_word\n",
         "long_word = \"Acknowledgement\"\n",
-        "\n"
+        "print(long_word[0::3])\n"
       ]
     },
     {
@@ -408,11 +512,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tcarahc\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example of stepping backwards using [6::-1]\n",
         "long_word = \"characteristics\"\n",
@@ -431,28 +543,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "desserts\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] reverse long_word\n",
         "long_word = \"stressed\"\n",
-        "\n"
+        "print(long_word[8::-1])\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "carahc\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] print the first 5 letters of long_word in reverse\n",
         "long_word = \"characteristics\"\n",
-        "\n"
+        "print(long_word[5::-1])\n"
       ]
     },
     {
@@ -466,18 +594,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "time\n",
+            "emit\n",
+            "enil\n",
+            "nile\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] print the first 4 letters of long_word\n",
         "# [ ] print the first 4 letters of long_word in reverse\n",
         "# [ ] print the last 4 letters of long_word in reverse\n",
         "# [ ] print the letters spanning indexes 3 to 6 of long_word in Reverse\n",
         "long_word = \"timeline\"\n",
-        "\n"
+        "print(long_word[:4])\n",
+        "print(long_word[3::-1])\n",
+        "print(long_word[:3:-1])\n",
+        "print(long_word[6:2:-1])"
       ]
     },
     {
@@ -505,7 +647,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+      "version": "3.8.13"
     },
     "vscode": {
       "interpreter": {
