--- a/Unit02/40461_Mod01_1.3.ipynb
+++ b/Unit02/40461_Mod01_1.3.ipynb
@@ -174,20 +174,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 2,
       "metadata": {
         "trusted": false
       },
       "outputs": [
         {
-          "ename": "TypeError",
-          "evalue": "'method' object is not iterable",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn [9], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m first_name \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[39minput\u001b[39m(first_name)\n\u001b[0;32m----> 6\u001b[0m \u001b[39mfor\u001b[39;00m letter \u001b[39min\u001b[39;00m first_name:\n\u001b[1;32m      7\u001b[0m     \u001b[39mprint\u001b[39m(letter)\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'method' object is not iterable"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "d\n",
+            "d\n",
+            "d\n"
           ]
         }
       ],
@@ -195,10 +193,11 @@
         "# [ ] Get user input for first_name\n",
         "# [ ] iterate through letters in first_name \n",
         "#    - print each letter on a new line\n",
-        "first_name = input\n",
-        "input(first_name)\n",
+        "first_name = input(\"first_name\")\n",
         "for letter in first_name:\n",
         "    print(letter)\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -350,11 +349,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.9.0"
     },
     "vscode": {
       "interpreter": {
-        "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+        "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
       }
     }
   },
