--- a/Unit02/40461_Mod02_2.1.ipynb
+++ b/Unit02/40461_Mod02_2.1.ipynb
@@ -220,30 +220,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is no parking on ['Alpha', 'Echo']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create a list, streets, that lists the name of 5 street name strings\n",
-    "\n",
+    "street_names= ['Alpha', 'Bravo', 'Charlie', 'Delta', 'Echo']\n",
     "# [ ] print a message that there is \"No Parking\" on index 0 or index 4 streets\n",
-    "\n"
+    "print('There is no parking on' , street_names[0::4])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m num_2_add \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m,\u001b[39m5\u001b[39m]\n\u001b[0;32m      3\u001b[0m \u001b[39m# [ ] print the sum of the numbers\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[39msum\u001b[39m \u001b[39m=\u001b[39m num_2_add[\u001b[39m0\u001b[39;49m]\u001b[39m+\u001b[39;49m num_2_add\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'list'"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create a list, num_2_add, made of 5 different numbers between 0 - 25\n",
-    "\n",
+    "num_2_add = [1,2,3,4,5]\n",
     "# [ ] print the sum of the numbers\n",
-    "\n"
+    "sum = num_2_add[0]+ num_2_add\n"
    ]
   },
   {
@@ -271,14 +291,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Total of checks 2 & 3 = $ 70\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Fix the error above by creating and running code in this cell\n",
-    "\n"
+    "pay_checks = [10,20,30,40,50]\n",
+    "print(\" Total of checks 2 & 3 = $\", pay_checks[2] + pay_checks[3])\n"
    ]
   },
   {
@@ -306,7 +335,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.9.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
   }
  },
  "nbformat": 4,
