--- a/Unit02/40461_Mod02_2.2.ipynb
+++ b/Unit02/40461_Mod02_2.2.ipynb
@@ -209,14 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "an item in the list is:  4\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Fix the Error\n",
-    "three_numbers = [1, 1, 2]\n",
+    "three_numbers = [1, 2, 3, 4]\n",
     "print(\"an item in the list is: \", three_numbers[3])\n",
     "\n"
    ]
@@ -246,7 +254,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.9.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
   }
  },
  "nbformat": 4,
