--- a/Unit02/40461_Mod02_2.3.ipynb
+++ b/Unit02/40461_Mod02_2.3.ipynb
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 1,
       "metadata": {
         "trusted": false
       },
@@ -287,17 +287,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Joana', 'michael', 'Alton', 'Tobias']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] insert a name from user input into the party_list in the second position (index 1)\n",
         "party_list = [\"Joana\", \"Alton\", \"Tobias\"]\n",
+        "party_list.insert(1, input(\"Enter a name\"))\n",
         "\n",
         "# [ ] print the updated list\n",
-        "\n"
+        "print(party_list)\n"
       ]
     },
     {
@@ -309,14 +318,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tree_list before = ['oak']\n",
+            "tree_list after  = ['oak', 'pine']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] Fix the Error\n",
-        "tree_list = \"oak\"\n",
+        "tree_list = [\"oak\"]\n",
         "print(\"tree_list before =\", tree_list)\n",
         "tree_list.insert(1,\"pine\")\n",
         "print(\"tree_list after  =\", tree_list)\n",
@@ -348,11 +366,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.0"
+      "version": "3.8.13"
     },
     "vscode": {
       "interpreter": {
-        "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+        "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
       }
     }
   },
