--- a/Unit02/40461_Mod04_4.1.ipynb
+++ b/Unit02/40461_Mod04_4.1.ipynb
@@ -87,11 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'poem1.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# [ ]Run to open the file in memory as poem_file\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m poem_file \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpoem1.txt\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'poem1.txt'"
+     ]
+    }
+   ],
    "source": [
     "# [ ]Run to open the file in memory as poem_file\n",
     "poem_file = open('poem1.txt', 'r')"
@@ -99,11 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'poem_file' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# [ ] run and review code to test if open worked \u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# should display name='poem1.txt' and no errors\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m poem_file\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'poem_file' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# [ ] run and review code to test if open worked \n",
     "# should display name='poem1.txt' and no errors\n",
@@ -126,26 +150,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100    56  100    56    0     0   2153      0 --:--:-- --:--:-- --:--:--  2153\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] import cities.txt\n",
+    "## Task 1: Import and open a local file in read mode\n",
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/cities -o cities.txt\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='cities.txt' mode='r' encoding='UTF-8'>\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] open cities.txt as cities_file\n",
     "# [ ] test cities.txt was opened \n",
+    "cities_file = open (\"cities.txt\", \"r\")\n",
+    "print(cities_file)\n",
     "\n"
    ]
   },
@@ -227,28 +273,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Beijing\\nCairo\\nLondon\\nNairobi\\nNew York City\\nSydney\\nTokyo\\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] after import and open of cities.txt in task 1\n",
     "# [ ] read cities_file as cities\n",
     "# [ ] display the string: cities\n",
-    "\n"
+    "cities = cities_file.read()\n",
+    "cities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beijing\n",
+      "Cairo\n",
+      "London\n",
+      "Nairobi\n",
+      "New York City\n",
+      "Sydney\n",
+      "Tokyo\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the string: cities\n",
-    "\n"
+    "print(cities)\n"
    ]
   },
   {
@@ -277,11 +350,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'poem1.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# [ ] review and run example to read poem1.txt 10 characters at a time\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m poem_file \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpoem1.txt\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m poem_10char \u001b[39m=\u001b[39m poem_file\u001b[39m.\u001b[39mread(\u001b[39m10\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(poem_10char)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'poem1.txt'"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example to read poem1.txt 10 characters at a time\n",
     "poem_file = open('poem1.txt', 'r')\n",
@@ -292,11 +377,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'poem_file' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [12], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# [ ] review and run example, + 10 more characters\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# reads and displays without storing in a variable\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m poem_file\u001b[39m.\u001b[39mread(\u001b[39m10\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'poem_file' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example, + 10 more characters\n",
     "# reads and displays without storing in a variable\n",
@@ -305,11 +402,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'poem_file' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [14], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# [ ] review and run example, + 10 more characters\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# reads and stores in variable poem_parts\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m poem_parts \u001b[39m=\u001b[39m poem_file\u001b[39m.\u001b[39mread(\u001b[39m10\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(poem_parts)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'poem_file' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example, + 10 more characters\n",
     "# reads and stores in variable poem_parts\n",
@@ -351,45 +460,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   303  100   303    0     0   1683      0 --:--:-- --:--:-- --:--:--  1683\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] digits of pi\n",
     "# 1. import digits_of_pi.txt\n",
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/digits_of_pi -o digits_of_pi.txt\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] digits of pi\n",
     "# 2. open as digits_of_pi_text \n",
+    "digits_of_pi_file = open('digits_of_pi.txt', 'r')\n",
     "# 3. read() 4 char of digits_of_pi_text to pi_digits variable \n",
+    "pi_digits = digits_of_pi_file.read(4)\n",
     "# 4. print pi_digits  \n",
-    "\n"
+    "print(pi_digits)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1415923.143.143.143.143.141415141514151415.1417494\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] digits of pi\n",
     "# 5. add to pi_digits string with string addition  \n",
     "#   a. add next 4 characters from digits_of_pi obtained from read()  \n",
     "#   b. run the cell multiple times to get more digits of *pi*\n",
-    "\n"
+    "digits_of_pi_file.seek(57,0)\n",
+    "pi_digits += digits_of_pi_file.read(4)\n",
+    "# 4. print pi_digits  \n",
+    "print(pi_digits)\n"
    ]
   },
   {
@@ -539,7 +681,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
   }
  },
  "nbformat": 4,
