--- a/Unit02/40461_Mod03_3.1.ipynb
+++ b/Unit02/40461_Mod03_3.1.ipynb
@@ -192,11 +192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['calcaneus', 'talus', 'cuboid', 'navicular']\n",
+      "['lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example of sorting into lists\n",
     "foot_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\", \n",
@@ -429,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
