--- a/Unit02/40461_Mod04_4.1.ipynb
+++ b/Unit02/40461_Mod04_4.1.ipynb
@@ -48,11 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100    56  100    56    0     0   1750      0 --:--:-- --:--:-- --:--:--  1750\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/poem1.txt -o poem1.txt\n"
@@ -87,23 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'poem1.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# [ ]Run to open the file in memory as poem_file\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m poem_file \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpoem1.txt\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'poem1.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# [ ]Run to open the file in memory as poem_file\n",
     "poem_file = open('poem1.txt', 'r')"
@@ -111,21 +109,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'poem_file' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# [ ] run and review code to test if open worked \u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# should display name='poem1.txt' and no errors\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m poem_file\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'poem_file' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='poem1.txt' mode='r' encoding='UTF-8'>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -150,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -161,7 +158,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100    56  100    56    0     0   2153      0 --:--:-- --:--:-- --:--:--  2153\n"
+      "100    56  100    56    0     0    224      0 --:--:-- --:--:-- --:--:--   224\n"
      ]
     }
    ],
@@ -174,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -219,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -231,11 +228,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Loops I repeat\\nloops\\nloops\\nloops\\nI repeat\\nuntil I\\nbreak\\n'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# shows the file as a string with formatting characters such as \"\\n\", output should be non-blank\n",
@@ -244,11 +252,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I repeat\n",
+      "loops\n",
+      "loops\n",
+      "loops\n",
+      "I repeat\n",
+      "until I\n",
+      "break\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# since .read() loaded the file as a string it can be printed\n",
@@ -273,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -281,10 +304,10 @@
     {
      "data": {
       "text/plain": [
-       "'Beijing\\nCairo\\nLondon\\nNairobi\\nNew York City\\nSydney\\nTokyo\\n'"
+       "''"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -350,21 +373,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'poem1.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# [ ] review and run example to read poem1.txt 10 characters at a time\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m poem_file \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpoem1.txt\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m poem_10char \u001b[39m=\u001b[39m poem_file\u001b[39m.\u001b[39mread(\u001b[39m10\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(poem_10char)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'poem1.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I re\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Loops I re'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -377,21 +406,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'poem_file' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [12], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# [ ] review and run example, + 10 more characters\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# reads and displays without storing in a variable\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m poem_file\u001b[39m.\u001b[39mread(\u001b[39m10\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'poem_file' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'peat\\nloops'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -402,20 +430,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'poem_file' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [14], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# [ ] review and run example, + 10 more characters\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# reads and stores in variable poem_parts\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m poem_parts \u001b[39m=\u001b[39m poem_file\u001b[39m.\u001b[39mread(\u001b[39m10\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(poem_parts)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'poem_file' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "loops\n",
+      "loo\n"
      ]
     }
    ],
@@ -428,11 +454,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "loops\n",
+      "loops\n",
+      "I \n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] REPEATEDLY RUN this cell,  + 5 more characters each time run are appended using string addition\n",
     "# [ ]  consider why no additional text displays after multiple runs\n",
@@ -460,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -471,7 +508,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100   303  100   303    0     0   1683      0 --:--:-- --:--:-- --:--:--  1683\n"
+      "100   303  100   303    0     0  10100      0 --:--:-- --:--:-- --:--:-- 10100\n"
      ]
     }
    ],
@@ -485,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -510,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -519,7 +556,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.1415923.143.143.143.143.141415141514151415.1417494\n"
+      "3.147494\n"
      ]
     }
    ],
@@ -564,11 +601,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOOPS I REPEAT\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "poem_file = open('poem1.txt', 'r')\n",
@@ -578,11 +624,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "poem_part = poem_file.read(6).title()\n",
@@ -591,11 +646,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loops\n",
+      "\n",
+      "False isalpha() because of `\\n`\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'loops\\n'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "poem_part = poem_file.read(6)\n",
@@ -606,11 +681,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repeat\n",
+      "loops\n",
+      "loops\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "poem_file = open('poem1.txt', 'r')\n",
@@ -635,24 +720,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# [ ] complete the task\n",
-    "\n"
+    "cities_file = open(\"cities.txt\", 'r')\n",
+    "cities = cities_file.read()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'City' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m     initials \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m city\n\u001b[1;32m      5\u001b[0m \u001b[39melif\u001b[39;00m city \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m:\n\u001b[0;32m----> 6\u001b[0m     initials \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m City\n\u001b[1;32m      7\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m      8\u001b[0m     \u001b[39mpass\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'City' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "initials = \"\"\n",
+    "for city in cities:\n",
+    "    if city.isupper():\n",
+    "        initials += city\n",
+    "    elif city == \"\\n\":\n",
+    "        initials += City\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "print(initials)"
+   ]
   },
   {
    "cell_type": "markdown",
