--- a/Unit03/3-1.1_intro_Python.ipynb
+++ b/Unit03/3-1.1_intro_Python.ipynb
@@ -94,9 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math\n",
     "x = -5\n",
@@ -105,9 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math as ml\n",
     "y = 12\n",
@@ -116,9 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from math import fabs\n",
     "fabs(-5)"
@@ -139,23 +172,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Import the math module and use an appropriate function to find the greatest common divisor of 16 and 28\n",
-    "\n",
+    "import math\n",
+    "math.gcd(16, 28)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Prompt the user to input 2 positive integers then print their greatest common divisor\n",
-    "\n"
+    "user1 = int(input(\"enter an integer\"))\n",
+    "user2 = int(input(\"enter another\"))\n",
+    "math.gcd(user1,user2)\n"
    ]
   },
   {
@@ -250,9 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
    "source": [
     "from math import sqrt\n",
     "a = 3\n",
@@ -272,9 +338,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# Even number (print 0)\n",
     "print(102 % 2)\n",
@@ -295,11 +370,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0\n",
+      "Number is False\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Fill out the function is_even with a code block that returns True if n is even and returns False if n is odd\n",
     "\n",
@@ -307,12 +392,14 @@
     "    #TODO\n",
     "\n",
     "# Test the function \n",
-    "x = 5\n",
+    "    x = 4\n",
+    "    print(x % 2)\n",
+    "x = print()\n",
     "if is_even(x):\n",
-    "    print(\"Number is even\")\n",
+    "    print(\"Number is True\")\n",
     "else:\n",
-    "    print(\"Number is odd\")\n",
-    "\n",
+    "    print(\"Number is False\")\n",
+    "    \n",
     "    \n"
    ]
   },
@@ -949,7 +1036,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
   }
  },
  "nbformat": 4,
